added styling to front end

--- a/style.css
+++ b/style.css
@@ -1,34 +1,110 @@
+body {
+    font-family: 'VT323', monospace;
+    text-align: center;
+    background: rgb(2,0,36);
+    background: linear-gradient(22deg, rgba(2,0,36,1) 0%, rgba(29,29,231,1) 0%, rgba(0,212,255,1) 100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh !important;
+    width: 100vw !important;
+    max-height: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+h1 {
+    font-size: 5em;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+#t {
+    color: #ffa500;
+}
+
+#e {
+    color: #0000ff;
+}
+
+#t2 {
+    color: #00ff00;
+}
+
+#r {
+    color: ff0000;
+}
+
+#i {
+    color: #800080;
+}
+
+#s {
+    color: #ffff00;
+}
+
 .container {
+    margin-top: 50px;
     display: flex;
+    margin: auto;
+    width: 40%;
+    text-align: center;
+}
+
+.column-left {
+    margin: auto;
+    width: 40%;
+}
+
+.column-right {
+    width: 40%;
 }
 
 .grid {
-    width: 200px;
-    height: 400px;
+    width: 300px;
+    height: 600px;
+    min-width: 300px;
+    min-height: 600px;
     display: flex;
     flex-wrap: wrap;
-    background-color: beige;
+    background-color: black;
+    border: 1px solid black;
 }
 
 .grid div {
-    height: 20px;
-    width: 20px;
-}
-
-.tetromino {
-    background-color: goldenrod;
+    height: 30px;
+    width: 30px;
 }
 
 .mini-grid {
-    margin-left: 50px;
-    width: 80px;
-    height: 80px;
+    margin: auto;
+    width: 120px;
+    height: 120px;
     display: flex;
     flex-wrap: wrap;
-    background-color: beige;
+    background-color: black;
 }
 
 .mini-grid div {
-    height: 20px;
-    width: 20px;
+    height: 30px;
+    width: 30px;
+}
+
+h3 {
+    font-size: 2em;
+}
+
+button {
+    background: none;
+    border: 3px dashed black;
+    font-family: 'VT323', monospace;
+    font-size: 2em;
+}
+
+button:hover {
+    background: black;
+    color: rgba(29,29,231,1);
+    cursor: pointer;
+    border: 3px dashed rgba(29,29,231,1);
 }
